Estilos extra, avisos de confirmación parciales, intentando arreglar php middleware

--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -221,13 +221,13 @@
                         <p class="text-sm text-gray-500 mt-4 inline-block">
                           <span class="hover:underline">{{ publication.upload_date }}</span>
                         </p>
-                        <div class="inline-block ml-20" *ngIf="isMyProfile">
-                          <a class="inline-block" routerLink="/user/{{ id }}/publication/{{ publication.id }}">
-                            <i class="fas fa-edit fa-lg hover:text-blue-700"></i>
+                        <div class="inline-block float-right mt-3" *ngIf="isMyProfile">
+                          <a class="inline-block rounded py-1 px-3 bg-blue-600 mr-2 hover:text-white" routerLink="/user/{{ id }}/publication/{{ publication.id }}">
+                            <i class="fas fa-edit fa-lg hover:text-white"></i> Editar
                           </a>
-                          <a class="inline-block" *ngIf="isMyProfile" (click)="deletePublication(i);">
-                            <i class="fas fa-trash-alt fa-lg text-red-700 hover:text-red-500 ml-1"></i>
-                          </a>
+                          <button class="inline-block rounded py-1 px-3 bg-gray-200 hover:text-red-500" *ngIf="isMyProfile" (click)="deletePublication(i);">
+                            <i class="fas fa-trash-alt fa-lg text-red-700 hover:text-red-500"></i> Eliminar
+                          </button>
                         </div>
                       </div>
 
