--- a/artist4all_angular/src/app/components/public/login/login.component.html
+++ b/artist4all_angular/src/app/components/public/login/login.component.html
@@ -24,6 +24,11 @@
               Se requiere un correo.
             </div>
           </div>
+          <div *ngIf="email.errors && email.errors.pattern"
+            class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+            <i class="fas fa-times-circle"></i>
+            Correo electrónico no válido.
+          </div>
         </div>
         <div class="py-2">
           <label for="password" class="block text-sm font-medium text-gray-700">
