--- a/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
@@ -97,8 +97,7 @@
           </nav>
         </aside>
 
-        <form [formGroup]="passwordForm" class="divide-y divide-gray-200 lg:col-span-9" method="POST"
-          (ngSubmit)="editPassword();">
+        <form [formGroup]="passwordForm" class="divide-y divide-gray-200 lg:col-span-9" (ngSubmit)="editingAnimation()">
           <div class="py-6 px-4 sm:p-6 lg:pb-8">
             <div>
               <h2 class="text-lg leading-6 font-medium text-gray-900">Cambiar mi contraseña</h2>
@@ -110,8 +109,8 @@
                   Contraseña
                 </label>
                 <div class="relative">
-                  <input formControlName="password" type="password" id="inputPassword" placeholder="Introduce tu nueva contraseña"
-                    class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+                  <input formControlName="password" type="password" id="inputPassword"
+                    placeholder="Introduce tu nueva contraseña" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
                   focus:bg-white
                   focus:border-purple-500
                   focus:outline-none">
@@ -121,7 +120,8 @@
                     <i class="fas fa-eye-slash fa-lg hover:text-gray-400 hidden" id="hideIcon"></i>
                   </div>
                 </div>
-                <div *ngIf="password.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                <div *ngIf="password.errors && isValidFormSubmitted != null && !isValidFormSubmitted"
+                  [ngClass]="'error'">
                   <div *ngIf="password.errors.required"
                     class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
                     <i class="fas fa-times-circle"></i>
@@ -138,13 +138,14 @@
               <div class="col-span-12">
                 <label for="confirmPassowrd" class="block text-sm font-medium text-gray-700">Confirma tu nueva
                   contraseña:</label>
-                  <input formControlName="passwordConfirm" type="password" placeholder="Confirma tu contraseña"
+                <input formControlName="passwordConfirm" type="password" placeholder="Confirma tu contraseña"
                   id="passwordConfirm" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
                   focus:placeholder-gray-600
                   focus:bg-white
                   focus:border-purple-500
                   focus:outline-none">
-                <div *ngIf="passwordConfirm.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                <div *ngIf="passwordConfirm.errors && isValidFormSubmitted != null && !isValidFormSubmitted"
+                  [ngClass]="'error'">
                   <div *ngIf="passwordConfirm.errors.required"
                     class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
                     <i class="fas fa-times-circle"></i>
