--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -60,15 +60,21 @@
                   class="h-8 w-8 rounded-full object-cover mx-1" src="{{ notification.user_responsible.imgAvatar }}"
                   alt="avatar">
                 <p class="text-gray-600 text-sm mx-2">
-                  <a routerLink="/user/{{ notification.user_responsible.id }}/profile"class="font-bold"> {{
+                  <a routerLink="/user/{{ notification.user_responsible.id }}/profile" class="font-bold"> {{
                     notification.user_responsible.username }} </a>
                   {{ notification.bodyNotification }}
                   <span class="font-bold"></span> . {{ notification.notification_date }}
                 </p>
-                <button *ngIf="notification.typeNotification == 2" (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 3)"><i class="fas fa-check-circle text-green"></i>Aceptar</button>
-                <button *ngIf="notification.typeNotification == 2" (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 1)"><i class="fas fa-times-circle text-red"></i>Rechazar</button>
-                <button *ngIf="notification.typeNotification != 2" (click)="notificationRead(notification.id)"><i class="fas fa-times inline-block"></i>Leído</button>
-                <button *ngIf="notification.typeNotification != 2" (click)="removeNotification(notification.id)"><i class="fas fa-times inline-block"></i>Borrar</button>
+                <button *ngIf="notification.typeNotification == 2"
+                  (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 3)"><i
+                    class="fas fa-check-circle text-green"></i>Aceptar</button>
+                <button *ngIf="notification.typeNotification == 2"
+                  (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 1)"><i
+                    class="fas fa-times-circle text-red"></i>Rechazar</button>
+                <button *ngIf="notification.typeNotification != 2" (click)="notificationRead(notification.id, i)"><i
+                    class="fas fa-times inline-block"></i>Leído</button>
+                <button *ngIf="notification.typeNotification != 2" (click)="removeNotification(notification.id, i)"><i
+                    class="fas fa-times inline-block"></i>Borrar</button>
               </div>
             </div>
             <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
@@ -122,8 +128,8 @@
               text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
               <a routerLink="/user/{{ id }}/settings/profile" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm
               text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
-              <a routerLink="" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm
-              text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()"><i
+              <a class="block px-4 py-2 text-sm
+              text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logoutAlert()"><i
                   class="fas fa-sign-out-alt mr-3"></i>Cerrar sesión</a>
             </div>
           </div>
@@ -173,7 +179,7 @@
           id="menu-toggle" role="menu">Mi perfil</a>
         <a routerLink="/user/{{ id }}/settings/profile" (click)="toggleMenuProfile()" role="menuitem"
           class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Configuración</a>
-        <a routerLink="" (click)="toggleMenuProfile()" role="menuitem"
+        <a (click)="logoutAlert()" role="menuitem"
           class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Cerrar
           sesión</a>
       </div>
