--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -222,11 +222,14 @@
                           <span class="hover:underline">{{ publication.upload_date }}</span>
                         </p>
                         <div class="inline-block float-right mt-3" *ngIf="isMyProfile">
-                          <a class="inline-block rounded py-1 px-3 bg-blue-600 mr-2 hover:text-white" routerLink="/user/{{ id }}/publication/{{ publication.id }}">
-                            <i class="fas fa-edit fa-lg hover:text-white"></i> Editar
-                          </a>
-                          <button class="inline-block rounded py-1 px-3 bg-gray-200 hover:text-red-500" *ngIf="isMyProfile" (click)="deletePublication(i);">
-                            <i class="fas fa-trash-alt fa-lg text-red-700 hover:text-red-500"></i> Eliminar
+                          <button class="inline-block rounded py-1 px-3 border border-gray-300 rounded-md shadow-sm justify-center text-sm font-medium text-gray-700
+                          hover:bg-gray-50 hover:text-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500
+                            mr-2" routerLink="/user/{{ id }}/publication/{{ publication.id }}">
+                            <i class="fas fa-edit fa-lg text-blue-700 hover:text-blue-500"></i> Editar
+                          </button>
+                          <button class="inline-block rounded py-1 px-3 border border-gray-300 rounded-md shadow-sm justify-center text-sm font-medium text-gray-700
+                          hover:bg-gray-50 focus:outline-none hover:text-red-500 focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" *ngIf="isMyProfile" (click)="deletePublication(i);">
+                            <i class="fas fa-trash-alt fa-lg text-red-700 hover:text-red-500 mr-1"></i> Eliminar
                           </button>
                         </div>
                       </div>
@@ -238,7 +241,7 @@
                     <div class="mt-6 flex justify-between space-x-8">
                       <div class="flex space-x-6">
                         <span class="inline-flex items-center text-sm">
-                          <button class="inline-flex space-x-2 text-gray-400 hover:text-gray-500">
+                          <button (click)="likePublication(i)" id="{{i + 'likeIcon'}}" class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 outline-none focus:outline-none">
                             <!-- Heroicon name: solid/thumb-up -->
                             <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
                               fill="currentColor" aria-hidden="true">
@@ -250,7 +253,7 @@
                           </button>
                         </span>
                         <span class="inline-flex items-center text-sm">
-                          <button class="inline-flex space-x-2 text-gray-400 hover:text-gray-500">
+                          <button class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 focus:outline-none">
                             <!-- Heroicon name: solid/chat-alt -->
                             <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
                               fill="currentColor" aria-hidden="true">
