--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -30,15 +30,15 @@
         </div>
       </div>
       <div class="hidden lg:flex lg:items-center lg:justify-end xl:col-span-3">
-        <div (click)="toggleNotifications();">
+        <div (click)="toggleNotifications();" class="focus:outline-none">
           <button href="#"
-            class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+            class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none">
             <span class="sr-only">Ver notificaciones</span>
             <!-- Heroicon name: outline/bell -->
             <!--           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
           </svg> -->
-            <p class="mt-1">
+            <p class="mt-1 ">
               <mat-icon *ngIf="notifications == null">notifications</mat-icon>
               <mat-icon *ngIf="notifications != null" matBadge="{{ notifications.length }}">notifications</mat-icon>
             </p>
