AuthMiddleware, se ha de modificar las rutas, publicaciones con logs de likes y comentarios adjuntos, likes casi hechos

--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -255,7 +255,7 @@
 
 
                           <!--TODO-->
-                          <button *ngIf="status_like != 0" (click)="likePublication(i)" id="{{i + 'likeIcon'}}" class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 outline-none focus:outline-none">
+                          <button (click)="likePublication(i)" id="{{i + 'likeIcon'}}" class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 outline-none focus:outline-none">
                             <!-- Heroicon name: solid/thumb-up -->
                             <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
                               fill="currentColor" aria-hidden="true">
