--- a/artist4all_angular/src/app/components/public/login/login.component.html
+++ b/artist4all_angular/src/app/components/public/login/login.component.html
@@ -42,7 +42,7 @@
             focus:outline-none">
             <div class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5"
               (click)="showOrHidePassword();">
-              <i class="fas fa-eye fa-lg text-gray-600 hover:text-black" id="showIcon"></i>
+              <i class="fas fa-eye fa-lg hover:text-gray-400" id="showIcon"></i>
               <i class="fas fa-eye-slash fa-lg hover:text-gray-400 hidden" id="hideIcon"></i>
             </div>
           </div>
