--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -131,11 +131,9 @@
                     <div id="n_Followers"
                       class="inline-flex justify-center px-4 py-2 text-sm font-medium rounded-md text-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
                       <a routerLink="/user/{{ id }}/followers"><span
-                          class="p-3 hover:text-purple-600 no-underline">Seguidores: {{
-                          n_followers }}</span></a>
+                          class="p-3 hover:text-purple-600 no-underline">Seguidores: {{ n_followers }}</span></a>
                       <a routerLink="/user/{{ id }}/followed"><span
-                          class="p-3 hover:text-purple-600 no-underline">Seguidos: {{
-                          n_followed }}</span></a>
+                          class="p-3 hover:text-purple-600 no-underline">Seguidos: {{ n_followed }}</span></a>
                     </div>
                   </div>
                 </div>
@@ -212,94 +210,91 @@
 
           <div *ngIf="publications != null">
             <div class="lg:col-span-8 lg:pt-8 lg:pb-10 xl:col-span-7">
-            <ul class="space-y-4" *ngFor="let publication of publications; index as i;">
-              <li class="bg-white px-4 py-6 shadow sm:p-6 sm:rounded-lg">
-                <article class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
-                  <div>
-                    <div class="flex space-x-3">
-                      <div class="min-w-0 flex-1 mb-3">
-                        <p class="text-sm text-gray-500 mt-4 inline-block">
-                          <span class="hover:underline">{{ publication.upload_date }}</span>
-                        </p>
-                        <div class="inline-block float-right mt-3" *ngIf="isMyProfile">
-                          <button class="inline-block py-1 px-3 border border-gray-300 rounded-md shadow-sm justify-center text-sm font-medium text-gray-700
+              <ul class="space-y-4" *ngFor="let publication of publications; index as i;" ng-init="setLikeStyles()">
+                <li class="bg-white px-4 py-6 shadow sm:p-6 sm:rounded-lg">
+                  <article class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div>
+                      <div class="flex space-x-3">
+                        <div class="min-w-0 flex-1 mb-3">
+                          <p class="text-sm text-gray-500 mt-4 inline-block">
+                            <span class="hover:underline">{{ publication.upload_date }}</span>
+                          </p>
+                          <div class="inline-block float-right mt-3" *ngIf="isMyProfile">
+                            <button class="inline-block py-1 px-3 border border-gray-300 rounded-md shadow-sm justify-center text-sm font-medium text-gray-700
                           hover:bg-gray-50 hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500
                             mr-2" routerLink="/user/{{ id }}/publication/{{ publication.id }}">
-                            <i class="fas fa-edit fa-lg text-blue-500 hover:text-blue-600"></i> Editar
-                          </button>
-                          <button class="inline-block py-1 px-3 border border-gray-300 rounded-md shadow-sm justify-center text-sm font-medium text-gray-700
-                          hover:bg-gray-50 focus:outline-none hover:text-red-500 focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" *ngIf="isMyProfile" (click)="deletePublication(i);">
-                            <i class="fas fa-trash-alt fa-lg text-red-700 hover:text-red-500 mr-1"></i> Eliminar
-                          </button>
+                              <i class="fas fa-edit fa-lg text-blue-500 hover:text-blue-600"></i> Editar
+                            </button>
+                            <button
+                              class="inline-block py-1 px-3 border border-gray-300 rounded-md shadow-sm justify-center text-sm font-medium text-gray-700
+                          hover:bg-gray-50 focus:outline-none hover:text-red-500 focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500"
+                              *ngIf="isMyProfile" (click)="deletePublication(i);">
+                              <i class="fas fa-trash-alt fa-lg text-red-700 hover:text-red-500 mr-1"></i> Eliminar
+                            </button>
+                          </div>
                         </div>
-                      </div>
 
-                    </div>
-                    <div class="mt-2 text-sm text-gray-700 space-y-4">
-                      <p>{{ publication.bodyPublication }}</p>
-                    </div>
-                    <div class="mt-6 flex justify-between space-x-8">
-                      <div class="flex space-x-6">
-                        <div *ngFor="let img of publication.imgsPublication; index as i;">
-                          <div *ngIf="publication.imgsPublication != null">
-                            <!--   TODO: permitir inline-block, limitar los border de las publicaciones -->
-                            <img src="{{ img.imgPublication }}" style="float: left;
+                      </div>
+                      <div class="mt-2 text-sm text-gray-700 space-y-4">
+                        <p>{{ publication.bodyPublication }}</p>
+                      </div>
+                      <div class="mt-6 flex justify-between space-x-8">
+                        <div class="flex space-x-6">
+                          <div *ngFor="let img of publication.imgsPublication; index as i;">
+                            <div *ngIf="publication.imgsPublication != null">
+                              <!--   TODO: permitir inline-block, limitar los border de las publicaciones -->
+                              <img src="{{ img.imgPublication }}" style="float: left;
                             width:  200px;
                             height: 200px;
                             object-fit: cover;">
+                            </div>
                           </div>
-                        </div>
-                        <span class="inline-flex items-center text-sm">
-                          <!--TODO: Button de like del perfil propio, para ver los que le han dado like-->
-                          <button *ngIf="!isMyProfile" (click)="likePublication(i)" id="{{i + 'likeIcon'}}" class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 outline-none focus:outline-none">
-                            <!-- Heroicon name: solid/thumb-up -->
-                            <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                              fill="currentColor" aria-hidden="true">
-                              <path
-                                d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z" />
-                            </svg>
+                          <span class="inline-flex items-center text-sm">
+                            <!--TODO: Button de like del perfil propio, para ver los que le han dado like-->
+                            <button *ngIf="!isMyProfile" (click)="likePublication(i)" id="{{i + 'likeIcon'}}"
+                              class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 outline-none focus:outline-none">
+                              <!-- Heroicon name: solid/thumb-up -->
+                              <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                fill="currentColor" aria-hidden="true">
+                                <path
+                                  d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z" />
+                              </svg>
+
+                              <span class="font-medium text-gray-900">0</span>
+                              <span class="sr-only">likes</span>
+                            </button>
+
+                            <!--TODO-->
+                            <button mat-icon-button (click)="updateLikeStatus(i)" id="{{i + 'likeIcon'}}"
+                              class="text-gray-400 hover:text-gray-500 outline-none focus:outline-none">
+                              <mat-icon>favorite</mat-icon>
+                            </button>
                             <span class="font-medium text-gray-900">{{ publication.n_likes }}</span>
                             <span class="sr-only">likes</span>
-                          </button>
-
-
-                          <!--TODO-->
-                          <button (click)="likePublication(i)" id="{{i + 'likeIcon'}}" class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 outline-none focus:outline-none">
-                            <!-- Heroicon name: solid/thumb-up -->
-                            <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                              fill="currentColor" aria-hidden="true">
-                              <path
-                                d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z" />
-                            </svg>
-                            <span class="font-medium text-gray-900">{{ publication.n_likes }}</span>
-                            <span class="sr-only">likes</span>
-                          </button>
-                        </span>
-                        <span class="inline-flex items-center text-sm">
-                          <button class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 focus:outline-none">
-                            <!-- Heroicon name: solid/chat-alt -->
-                            <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                              fill="currentColor" aria-hidden="true">
-                              <path fill-rule="evenodd"
-                                d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z"
-                                clip-rule="evenodd" />
-                            </svg>
-                            <span class="font-medium text-gray-900">{{ publication.n_comments }}</span>
+                          </span>
+                          <span class="inline-flex items-center text-sm">
+                            <button class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 focus:outline-none">
+                              <!-- Heroicon name: solid/chat-alt -->
+                              <svg class="h-7 w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                  d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z"
+                                  clip-rule="evenodd" />
+                              </svg>
+                            </button>
+                            <span class="font-medium text-gray-900 ml-2">{{ publication.n_comments }}</span>
                             <span class="sr-only">replies</span>
-                          </button>
-                        </span>
-                        
+                          </span>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                </article>
-              </li>
-            </ul>
-          </div>
+                  </article>
+                </li>
+              </ul>
+            </div>
           </div>
         </article>
       </main>
     </div>
   </div>
 </div>
-<app-footer></app-footer>
