--- a/artist4all_angular/src/app/components/secure/provisional-add-user/provisional-add-user.component.html
+++ b/artist4all_angular/src/app/components/secure/provisional-add-user/provisional-add-user.component.html
@@ -1,9 +1,9 @@
 <app-user-navbar></app-user-navbar>
 <p>provisional-add-user works!</p>
 
-<div *ngIf="userlist == null"> No hay usuarios registrados </div>
-<div *ngIf="userlist != null">
-  <section *ngFor="let user of userlist; index as i;">
+<div *ngIf="userList == null"> No hay usuarios registrados </div>
+<div *ngIf="userList != null">
+  <section *ngFor="let user of userList; index as i;">
     <table routerLink="/user/{{ user.id }}/profile">
       <tr>
         <td>
@@ -13,3 +13,44 @@
     </table>
   </section>
 </div>
+
+<div *ngIf="userList == null"> No hay usuarios registrados </div>
+<div *ngIf="userList != null">
+  <section *ngFor="let user of userList; index as i;">
+    <table routerLink="/user/{{ user.id }}/profile">
+      <tr>
+        <td>
+          {{ user.username }}
+        </td>
+      </tr>
+    </table>
+  </section>
+</div>
+
+<mat-form-field>
+  <mat-label>Filtro</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Busqueda por nombre" #input>
+</mat-form-field>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="username">
+    <th mat-header-cell *matHeaderCellDef> Nombre de usuario </th>
+    <td mat-cell *matCellDef="let user"> {{user.username}} hola</td>
+  </ng-container>
+
+    <!-- Weight Column -->
+  <!--   <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Weight </th>
+      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    </ng-container> -->
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  <!-- Row shown when there is no matching data. -->
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+  </tr>
+</table>
