--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -32,7 +32,7 @@
       <div class="hidden lg:flex lg:items-center lg:justify-end xl:col-span-3">
         <div (click)="toggleNotifications();" class="focus:outline-none">
           <button href="#"
-            class="bg-white p-1 rounded-full text-gray-500 hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+            class="bg-white p-1 rounded-full text-gray-500 hover:text-gray-700">
             <span class="sr-only">Ver notificaciones</span>
             <!-- Heroicon name: outline/bell -->
             <!--           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
