--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -117,7 +117,7 @@
             <div (click)="toggleMenuProfile()">
               <button mat-icon-button class="bg-gray-800 flex text-sm rounded-full focus:outline-none" id="user-menu" aria-haspopup="true">
                 <span class="sr-only">Open user menu</span>
-                <img class="h-10 w-10 mt-2 rounded-full" src="{{ user.imgAvatar }}" alt="imgAvatar">
+                <img class="rounded-full" src="{{ user.imgAvatar }}" alt="imgAvatar">
               </button>
             </div>
             <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1
