added followers page

--- a/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
@@ -1,17 +1,97 @@
 <app-user-navbar></app-user-navbar>
-<p>listuser works!</p>
+<div class="lg: max-w-full grid lg:grid-cols-12 lg:gap-8 sm:grid-cols-2" style="padding-left: 0;">
+  <div class="hidden lg:block lg:col-span-2 bg-gray-800">
+    <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300" style="padding:25px;">
+      <div class="pb-8 space-y-1">
+        <!-- Current: "bg-gray-200 style="padding:25px;"text-gray-900", Default: "text-gray-600 hover:bg-gray-50" -->
+        <a routerLink="/home"
+          class="bg-gray-900 text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md"
+          aria-current="page">
+          <!-- Heroicon name: outline/home -->
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+          </svg>
+          <span class="truncate">
+            <a routerLink="/home" class="hover:text-gray-200">Home</a>
+          </span>
+        </a>
 
-<div *ngIf="userlist == null && typeList  == 'followers'"> Todavía no tienes ningún seguidor </div>
-<div *ngIf="userlist == null && typeList == 'followed'"> Todavía no sigues a ningún usuario </div>
-<div *ngIf="userlist != null">
-  <section *ngFor="let user of userlist; index as i;">
-    <table routerLink="/user/{{ user.id }}/profile">
-      <tr>
-        <td>
-          {{ user.username }}
-        </td>
-      </tr>
-    </table>
-  </section>
+        <a routerLink="/store"
+          class="text-gray-200 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
+          <!-- Heroicon name: outline/fire -->
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
+            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
+            </path>
+          </svg>
+          <span class="truncate">
+            <a routerLink="/store" class="hover:text-gray-200">Tienda</a>
+          </span>
+        </a>
+
+        <a routerLink="/user/{{ id }}/messages"
+          class="text-gray-200 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
+          <!-- Heroicon name: outline/user-group -->
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
+            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4">
+            </path>
+          </svg>
+          <span class="truncate">
+            <a routerLink="/user/{{ id }}/messages" class="hover:text-gray-200">Mensajería</a>
+          </span>
+        </a>
+
+        <a routerLink="/user/list"
+          class="text-gray-200 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
+          <!-- Heroicon name: outline/trending-up -->
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
+          </svg>
+          <span class="truncate">
+            <a routerLink="/user/list" class="hover:text-gray-200">Usuarios</a>
+          </span>
+        </a>
+      </div>
+    </nav>
+  </div>
+
+  <div *ngIf="userlist == null && typeList  == 'followers'"> Todavía no tienes ningún seguidor </div>
+  <div class="block lg:col-span-4 pt-8">
+    <div *ngIf="userlist == null && typeList == 'followed'"> Todavía no sigues a ningún usuario </div>
+    <div *ngIf="userlist != null">
+      <section *ngFor="let user of userlist; index as i;">
+
+        <div
+          class="relative rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
+          <div class="flex-shrink-0">
+            <img class="h-10 w-10 rounded-full" src="{{ user.img }}" alt="">
+          </div>
+          <div class="flex-1 min-w-0">
+            <a routerLink="/user/{{ user.id }}/profile" class="focus:outline-none">
+              <span class="absolute inset-0" aria-hidden="true"></span>
+              <p class="text-sm font-medium text-gray-900">
+                {{ user.username }}
+              </p>
+            </a>
+          </div>
+        </div>
+
+        <table>
+          <tr>
+            <td>
+
+            </td>
+          </tr>
+        </table>
+      </section>
+    </div>
+  </div>
 </div>
+
 <!-- todo boton para volver -->
