--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -213,7 +213,7 @@
                         <div class="min-w-0 flex-1 mb-3">
                           <p class="text-sm text-gray-500 mt-4 inline-block">
                             <span *ngIf="publication.isEdited == 0" class="hover:underline">{{ publication.upload_date }}</span>
-                            <span *ngIf="publication.isEdited == 1" class="hover:underline">{{ publication.upload_date }} (editado)</span>
+                            <span *ngIf="publication.isEdited == 1" class="hover:underline">{{ publication.upload_date }} (editada)</span>
                           </p>
                           <div class="inline-block float-right mt-3" *ngIf="isMyProfile">
                             <button class="inline-block py-1 px-3 border border-gray-300 rounded-md shadow-sm justify-center text-sm font-medium text-gray-700
@@ -240,9 +240,9 @@
                             <div *ngIf="publication.imgsPublication != null">
                               <!--   TODO: permitir inline-block, limitar los border de las publicaciones -->
                             <img src="http://localhost:81/assets/img/{{ img.imgPublication }}" style="float: left;
-                            width:  200px;
-                            height: 200px;
-                            object-fit: cover;">
+                            width:  500px;
+                            height: 500px;
+                            object-fit: contain;">
                             </div>
                           </div>
                           <span class="inline-flex items-center text-sm">
@@ -266,8 +266,8 @@
                             </div>
                           </span>
                           <span class="inline-flex items-center text-sm">
-                            <button class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 focus:outline-none">
-
+                            <button routerLink="/user/{{ publication.user.id }}/publication/{{ publication.id }}/comments"
+                            class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 focus:outline-none">
                               <svg class="h-7 w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
                                 fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd"
