--- a/artist4all_angular/src/app/components/secure/provisional-add-user/provisional-add-user.component.html
+++ b/artist4all_angular/src/app/components/secure/provisional-add-user/provisional-add-user.component.html
@@ -37,19 +37,15 @@
   <!-- Position Column -->
   <ng-container matColumnDef="username">
     <th mat-header-cell *matHeaderCellDef> Nombre de usuario </th>
-    <td mat-cell *matCellDef="let user"> {{user.username}} hola</td>
+    <td mat-cell *matCellDef="let userlist"> {{user.username}} hola</td>
   </ng-container>
 
-    <!-- Weight Column -->
-  <!--   <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-    </ng-container> -->
+
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-  <!-- Row shown when there is no matching data. -->
+
   <tr class="mat-row" *matNoDataRow>
     <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
   </tr>
